# choose-your-own-derivative

./: Choose.hs  Compat.hs  Constraints.hs  Derivatives.hs  LICENSE  Locations.hs  README.md  SType.hs  Value.hs  choose-your-own-derivative.cabal  stack.yaml
examples/: Async.hs  Timeout.hs
src/: Choose.hs  Constraints.hs  Derivatives.hs  Equiv.hs  Locations.hs  NFI.hs  Pretty.hs  ToFM.hs  Types.hs
src/examples/: Timeout.hs
