name:                choose-your-own-derivative
version:             0.1.0
synopsis:            Generic selective choice
description:         See README.md
license:             MIT
license-file:        LICENSE
build-type:          Simple
extra-source-files:  examples/*.hs
cabal-version:       >=1.10

library
  hs-source-dirs:    src, src/examples
  exposed-modules:     Constraints
                     , ToFM
                     , Pretty
                     , Types
                     , Derivatives
                     , NFI
                     , Locations
                     , Choose
                     , Equiv
  build-depends:     async >= 2.1.0
                   , base >= 4.7 && < 5
                   , random >= 1.1
                   , safe >= 0.3.9
                   , reflection >= 2.1
                   , typelits-witnesses >= 0.2.3.0
                   , constraints >= 0.8
                   , bifunctors ==5.3.*
                   , singletons >= 2.1
  default-language:    Haskell2010
